# PADELF-PIP

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
docs/: api.md  datasets.md  getting-started.md  index.md  loader-developer-guide.md
src/padelf/: __init__.py  loader.py  utils.py
src/padelf/configs/: AEMO.yaml  ELD.yaml  ENTSO-E.yaml  GEFCOM12.yaml  IHPC.yaml  ISO-NE.yaml  NYISO.yaml  OPSD.yaml  Pecan-Street.yaml  RTE-France.yaml  VEA.yaml  _template.yaml
tests/: test_loader.py  test_smoke.py  test_utils.py
